# bt-navi-tests

./: .gitignore  .gitmodules  README.md  _build.py  bench.py  config.yml  pyproject.toml  setup.py
navi/bumble_ext/: a2dp.py  android_hci_proxy_arm64-v8a  android_hci_proxy_armeabi-v7a  android_hci_proxy_x86_64  asha.py  bnep.py  ccp.py  crown.py  gatt_helper.py  hci.py  hfp.py  hid.py  message_access.py  obex.py  ogg.py  opp.py  pan.py  pbap.py  rap.py  rfcomm.py
navi/tests/: generic_functionality_suite.py  main.py  navi_test_base.py
navi/tests/benchmark/: a2dp_test.py  classic_gap_test.py  hfp_ag_test.py  hfp_hf_test.py  le_gap_test.py  performance_tool.py  throughput_test.py
navi/tests/functionality/: a2dp_sink_test.py  asha_dual_devices_test.py  bqr_test.py  classic_headset_test.py  classic_pairing_test.py  le_audio_unicast_client_dual_device_test.py  le_pairing_test.py  rfcomm_socket_test.py
navi/tests/smoke/: a2dp_test.py  asha_test.py  broadcast_test.py  classic_host_test.py  classic_pairing_test.py  distance_measurement_test.py  gatt_client_test.py  gatt_server_test.py  hfp_ag_test.py  hfp_hf_test.py  hid_test.py  hogp_test.py  l2cap_test.py  le_audio_unicast_client_test.py  le_host_test.py  map_test.py  opp_test.py  pairing_utils.py  pan_test.py  pbap_test.py  rfcomm_test.py
navi/tests/smoke/data/: call_logs.json  (+1 more)
navi/utils/: __init__.py  adb_snippets.py  android_constants.py  audio.py  audio.pyi  auracast_uri.py  bl4a_api.py  bluetooth_constants.py  constants.py  errors.py  lc3.py  lc3.pyi  lc3_pybind.cc  lc3_pybind.pyi  logcat.py  matcher.py  pyee_extensions.py  resources.py  retry.py  snippet_constants.py  snippet_constants.textproto  snippet_stub.py  snippet_stub.pyi
navi/utils/testdata/: gatt_characteristic_read_request.json  gatt_characteristic_write_request.json  gatt_service.json  scan_result.json
snippet/: AndroidManifest.xml  AudioSnippet.kt  BluetoothA2dpSnippet.kt  BluetoothAdapterSnippet.kt  BluetoothGattClientSnippet.kt  BluetoothGattServerSnippet.kt  BluetoothHapClientSnippet.kt  BluetoothHfpAgSnippet.kt  BluetoothHfpHfSnippet.kt  BluetoothHidHostSnippet.kt  BluetoothL2capSnippet.kt  BluetoothLeAudioSnippet.kt  BluetoothLeBroadcastAssistantSnippet.kt  BluetoothLeBroadcastMetadataExt.kt  BluetoothLeBroadcastSnippet.kt  BluetoothOppSnippet.kt  BluetoothPanSnippet.kt  BluetoothProfileSnippet.kt  BluetoothRfcommSnippet.kt  DistanceMeasurementSnippet.kt  InCallServiceImpl.kt  InputActivity.kt  InputSnippet.kt  JsonObjectConverter.kt  OtherSnippet.kt  SnippetConstants.kt  TelecomSnippet.kt  Utils.kt
snippet/res/xml/: file_paths.xml
