[build-system]
requires = ["setuptools>=61.0.0", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "navi"
version = "0.1.0"
authors = [
    { name = "Google", email = "pixel-bluetooth-testing-dev@google.com" },
]
requires-python = ">=3.11"
dependencies = [
    "bumble==0.0.212",
    "mobly",
    "typing_extensions",
    "pydub",
    "absl-py",
    "snippet-uiautomator",
    "setuptools>=61.0.0",
    "numpy",
    "mobly-android-partner-tools >= 1.1.1",
    "audioop-lts; python_version >= '3.13'"
]

[project.optional-dependencies]
dev = ["mypy == 1.15.0"]

[project.scripts]
venti = "navi.tests.main:run_venti"
smoke = "navi.tests.main:run_smoke"
run_all = "navi.tests.main:run_all"

[tool.setuptools]
packages = ["navi"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed", "*.json", "*.mp3", "android_hci_proxy_*", "*.apk"]

[tool.mypy]
follow_untyped_imports = true
disable_error_code = ["method-assign"]
